--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react-bootstrap": "^2.10.5",
         "react-bootstrap-daterangepicker": "^8.0.0",
         "react-dom": "^18",
+        "react-toastify": "^10.0.6",
         "sass": "^1.79.4",
         "yup": "^1.4.0"
     },
